# heyu-ai

./: .env.example  .gitignore  .mailmap  CONTRIBUTING.md  LICENSE  README.md  compose.yaml  package.json  pytest.ini  render.yaml  停止禾语AI.bat  启动禾语AI.bat  安装禾语AI.bat  重置禾语AI演示.bat
apps/api/: Dockerfile  README.md  alembic.ini  e2e_app.py  portable_launcher.py  pyproject.toml
apps/api/app/: __init__.py  abuse.py  ai.py  config.py  database.py  document_import.py  governance.py  knowledge_indexing.py  main.py  marketing.py  marketing_documents.py  marketing_exports.py  media_analysis.py  models.py  operation_feedback.py  operation_imports.py  platform_exports.py  presentation_export.py  provider_connections.py  publication_locators.py  publication_workflow.py  quality_runs.py  rag_evaluation.py  retrieval.py  schemas.py  script_quality.py  security.py  services.py  trend_discovery.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0c8bd48717ad_add_knowledge_revision_chain.py  3f6c8d21a4b0_add_knowledge_review_notes.py  5d7a0d15cb4f_add_knowledge_source_integrity.py  a1b2c3d4e5f6_add_hybrid_rag_index.py  a3c1260f4bd7_add_structured_video_diagnoses.py  a4b5c6d7e8f9_add_campaign_packages.py  a6b7c8d9e0f1_link_marketing_plans_to_publications.py  b2c3d4e5f6a7_add_commercial_foundations.py  b5c6d7e8f9a0_add_campaign_supply_snapshots.py  b7c8d9e0f1a2_add_knowledge_document_sections.py  b7e15a6a90cb_add_publication_performance_tracking.py  c3d4e5f6a7b8_add_operation_feedback.py  c4e9a8b7d6f5_add_organization_invitations.py  c6d7e8f9a0b1_add_campaign_farmer_evidence_snapshots.py  e29d7f22241d_initial_schema.py  (+10 more)
apps/api/tests/: conftest.py  test_abuse_controls.py  test_ai_provider.py  test_campaign_briefs.py  test_campaign_packages.py  test_content_workflow.py  test_document_import.py  test_document_workflow_api.py  test_farmer_evidence.py  test_governance.py  test_health.py  test_hybrid_retrieval.py  test_knowledge_indexing.py  test_marketing_plan.py  test_marketing_plan_documents.py  test_marketing_plan_exports.py  test_marketing_plan_library.py  test_marketing_publication_workflow.py  test_media_analysis.py  test_membership.py  test_operation_feedback.py  test_operation_imports.py  test_platform_exports.py  test_portable_launcher.py  test_presentation_export.py  test_provider_connections.py  test_publication_workflow.py  test_quality_evaluation.py  test_quality_runs.py  test_rag_evaluation.py  test_rbac_readonly.py  test_script_quality.py  test_tenant_isolation.py  test_trend_discovery.py
(+70 files in other folders)
