[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agri-content-api"
version = "0.1.0"
description = "Multi-tenant API for an AI agricultural content platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.14,<2",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "pyjwt>=2.10,<3",
  "pwdlib[argon2]>=0.2,<1",
  "email-validator>=2.2,<3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]
