[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agri-content-api"
version = "0.1.0"
description = "Multi-tenant API for an AI agricultural content platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.14,<2",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "pyjwt>=2.10,<3",
  "pwdlib[argon2]>=0.2,<1",
  "email-validator>=2.2,<3",
  "httpx>=0.28,<1",
  "pypdf>=5.9,<6",
  "python-multipart>=0.0.20,<1",
  "python-docx>=1.1,<2",
  "python-pptx>=1.0.2,<2",
  "reportlab>=4.2,<5",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
  "types-reportlab>=4.4,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# FastAPI serializes SQLAlchemy ORM return values through the declared Pydantic
# response models at runtime. Keep all other checks active for the route module,
# while avoiding duplicate ORM-to-response conversion solely for static typing.
[[tool.mypy.overrides]]
module = ["app.main"]
disable_error_code = ["return-value"]
